<resources>
    <string name="app_name">UdaCity_Inventory App</string>
    <string name="title_activity_editor">Edit_Goods</string>
    <string name="category_overview">Overview</string>
    <string name="hint_pet_name">Name</string>
    <string name="hint_pet_breed">Breed</string>
    <string name="category_category">Category</string>
    <string name="category_stock">Stock</string>
    <string name="hint_goods_stock">Quantity</string>
    <string name="unit_pet_weight">kg</string>
    <string name="action_insert_dummy_data">insert_dummy_data</string>
    <string name="action_delete_all_entries">delete_all_entries</string>
    <string name="action_save">save</string>
    <string name="action_delete">delete</string>
    <string name="editor_activity_title_new_goods">Add new goods</string>
    <string name="editor_activity_title_edit_goods">Edit goods</string>
    <string name="catalog_activity_title">Inventory</string>
    <string name="delete_dialog_msg">Delete this Goods?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="category_sale">Sale</string>
    <string name="hint_goods_sale">Price</string>
    <string name="category_supply">Supply</string>
    <string name="hint_goods_supply">Supplier</string>
    <string name="category_icon">Icon</string>
    <string name="category_arts_crafts_sewing"><![CDATA[Arts,Crafts&Sewing]]></string>
    <string name="category_automotive_parts_accessories"><![CDATA[Automotive Parts&Accessories]]></string>
    <string name="category_baby">Baby</string>
    <string name="category_beauty_personal_care"><![CDATA[Beauty&Personal Care]]></string>
    <string name="category_books">Books</string>
    <string name="category_cds_vinyl"><![CDATA[Cds&Vinyl]]></string>
    <string name="category_cell_phone_accessories"><![CDATA[Cell phone&Accessories]]></string>
    <string name="category_clothing_shoes_jewelry"><![CDATA[Clothing,Shoes&Jewelry]]></string>
    <string name="category_collectibles_fine_art"><![CDATA[Collectibles&Fine Art]]></string>
    <string name="category_computers">Computers</string>
    <string name="category_courses">Courses</string>
    <string name="category_credit_payment_cards"><![CDATA[Credit&Payment Cards]]></string>
    <string name="category_digital_music">Digital Music</string>
    <string name="category_electronics">Electronics</string>
    <string name="category_gift_cards">Gift Cards</string>
    <string name="category_other">Other</string>
    <string name="editor_insert_fail">Insert new goods failed</string>
    <string name="editor_insert_success">Insert new goods successfully</string>
    <string name="editor_update_fail">Update goods failed</string>
    <string name="editor_update_success">Update goods successfully</string>
    <string name="tv_empty_headline">No information of goods</string>
    <string name="tv_goods_sale">SALE</string>
    <string name="tv_goods_order">ORDER</string>
    <string name="ensure_update">ensure</string>
</resources>
